tests/ui/dyn-star/no-unsize-coerce-dyn-trait.stderr
error[E0308]: mismatched types
  --> $DIR/no-unsize-coerce-dyn-trait.rs:11:26
   |
LL |     let y: Box<dyn* B> = x;
   |            -----------   ^ expected trait `B`, found trait `A`
   |            |
   |            expected due to this
   |
   = note: expected struct `Box<dyn* B>`
              found struct `Box<dyn* A>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
